# shellfront

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  configure.ac  libshellfront.c  main.c  makefile  makefile.am  shellfront.h  shellfront.pc.in
po/: LINGUAS  POTFILES.in  en.po  shellfront.pot  zh.po
src/: README.md  gtkfunc.c  interface.c  internal.h  libfunc.c  main.c  makefile.am  parse.c  shellfront.c  shellfront.h  t_gtkfunc.c  t_gtkfunc_helper.c  t_interface.c  t_interface_init.c  t_interface_lock.c  t_interface_parse.c  t_libfunc.c  t_main.c  t_parse.c  t_util.c  test.h  util.c
